--- a/products/.env.dev
+++ b/products/.env.dev
@@ -1,4 +1,4 @@
-APP_SECRET ='Secret_prod'
+APP_SECRET ='Secret_cus'
 
 # Mongo DB
 MONGODB_URI='mongodb+srv://deval135darji:SxAZIl5EMyzZRGN6@products-ms.ijqmqtj.mongodb.net/?retryWrites=true&w=majority&appName=Products-MS'
