--- a/.github/workflows/CI_Workflow.yml
+++ b/.github/workflows/CI_Workflow.yml
@@ -25,3 +25,15 @@ jobs:
       run: |
         npm ci
         npm test
+
+    - name: Test Product Service
+      working-directory: ./product
+      run: |
+        npm ci
+        npm test
+
+    - name: Test Shopping Service
+      working-directory: ./shopping
+      run: |
+        npm ci
+        npm test
