--- a/.github/workflows/CI_Workflow.yml
+++ b/.github/workflows/CI_Workflow.yml
@@ -27,7 +27,7 @@ jobs:
         npm test
 
     - name: Test Product Service
-      working-directory: ./product
+      working-directory: ./products
       run: |
         npm ci
         npm test
